--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,8 +11,11 @@
           <input matInput [(ngModel)]="questions[0].answer" name="question1" />
         </mat-form-field>
       </form>
+      <button mat-raised-button (click)="continue()" color="primary">
+        Back
+      </button>
       <button mat-raised-button (click)="next()" color="primary">
-        Next Question
+        Next
       </button>
     </mat-tab>
     <mat-tab label="Second" [disabled]="indexQuestion!=1">
@@ -23,7 +26,7 @@
         </mat-form-field>
       </form>
       <button mat-raised-button (click)="next()" color="primary">
-        Next Question
+        Next
       </button>
     </mat-tab>
     <mat-tab label="Third" [disabled]="indexQuestion!=2">
@@ -33,8 +36,8 @@
           <input matInput [(ngModel)]="questions[2].answer" name="question3" />
         </mat-form-field>
       </form>
-      <button mat-raised-button (click)="finish()" color="primary">
-        Finish
+      <button mat-raised-button (click)="continue()" color="primary">
+        Continue
       </button>
     </mat-tab>
   </mat-tab-group>
